--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytz = "==2023.3"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.6.3"
 tzdata = "==2023.3"
+whitenoise = "==5.3.0"
 
 [dev-packages]
 
