--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==4.2.2"
+asgiref = "==3.7.2"
+django-spa = "==0.3.6"
+djangorestframework = "==3.14.0"
+pytz = "==2023.3"
+sqlparse = "==0.4.4"
+tzdata = "==2023.3"
+whitenoise = "==5.3.0"
 
 [dev-packages]
 
