--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ pytz = "==2023.3"
 sqlparse = "==0.4.4"
 tzdata = "==2023.3"
 whitenoise = "==5.3.0"
+dj-database-url = "==2.0.0"
+django-ratelimit = "==4.0.0"
+ratelimit = "==2.2.1"
+typing-extensions = "==4.6.3"
 
 [dev-packages]
 
