--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ dj-database-url = "==2.0.0"
 django-ratelimit = "==4.0.0"
 ratelimit = "==2.2.1"
 typing-extensions = "==4.6.3"
+gunicorn = "==20.1.0"
 
 [dev-packages]
 
