--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-ratelimit = "==4.0.0"
 ratelimit = "==2.2.1"
 typing-extensions = "==4.6.3"
 gunicorn = "==20.1.0"
+psycopg2-binary = "==2.9.6"
 
 [dev-packages]
 
